// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"CNCL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"PASS","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"PEND","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"READ","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with all prop options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"TIMO","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":false,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":false,"isRetrying":false} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":false,"isRetrying":null} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":false,"isRetrying":true} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button disabled=\\"true\\" is-loading=\\"true\\" icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":false} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":null,"isRetrying":false} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":null,"isRetrying":null} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":null,"isRetrying":true} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button disabled=\\"true\\" is-loading=\\"true\\" icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":null} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <z-alert type=\\"warning\\" class=\\"mx-3 mb-3\\">
    <div class=\\"flex items-center justify-between\\">
      <div class=\\"flex items-center gap-x-2\\">
        <zicon-stub icon=\\"timer-reset\\" color=\\"current\\"></zicon-stub> <span>This check was <span class=\\"lowercase\\">Timed out</span>.</span>
      </div>
      <div class=\\"group -my-3 -mr-2 rounded-sm bg-honey hover:cursor-pointer\\">
        <z-button icon=\\"fast-forward\\" button-type=\\"ghost\\" color=\\"ink-400\\" label=\\"Retry check\\" size=\\"small\\" class=\\"group-hover:bg-honey-300\\"></z-button>
      </div>
    </div>
  </z-alert>
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":true,"isRetrying":false} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":true,"isRetrying":null} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":true,"isRetrying":true} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"hideRetry":true} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"isRetrying":false} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"isRetrying":null} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}},"isRetrying":true} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`[[ RunHeader ]] renders \`RunHeader\` with retry check options: {"branchName":"master","commitOid":"86215f5d0d27e08c86f752c61510130fb37901ef","createdAt":"2020-07-07T16:58:15.109526+00:00","status":"FAIL","finishedIn":88,"gitCompareDisplay":"b3907ba..86215f5","checks":[{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}],"routeToPrevious":"/gh/deepsourcelabs/demo-python/history/runs","vcsCommitUrl":"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef","vcsPrUrl":"https://github.com/deepsourcelabs/demo-python/pull/77","pullRequestNumberDisplay":"#77","currentAnalyzer":"python","check":{"id":"Q2hlY2s6YnJnbnZq","issuesRaisedCount":23,"isRetryable":true,"status":"TIMO","analyzer":{"name":"Python","shortcode":"python","description":"DeepSource's Python analyzer.","analyzerLogo":"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg"}}} 1`] = `
"<div>
  <div class=\\"flex w-full justify-between md:h-26 lg:grid lg:grid-cols-fr-16 xl:grid-cols-fr-22\\">
    <div class=\\"flex flex-col gap-y-4 p-3\\">
      <div class=\\"flex items-start gap-x-2\\">
        <analyzer-logo size=\\"large\\" name=\\"Python\\" shortcode=\\"python\\" description=\\"DeepSource's Python analyzer.\\" analyzerlogo=\\"http://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/python.svg\\"></analyzer-logo>
        <div class=\\"text-lg font-bold text-vanilla-100\\">
          Python

          <span class=\\"font-medium text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/commit/86215f5d0d27e08c86f752c61510130fb37901ef\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">@86215f5</a></span></div>
        <ztag-stub spacing=\\"\\" class=\\"hidden border border-slate-400 px-2 py-0.5 md:inline-flex\\">
          <div class=\\"flex items-center gap-x-1\\">
            <zicon-stub icon=\\"check\\" color=\\"juniper\\" class=\\"flex-shrink-0\\"></zicon-stub> <span class=\\"text-xxs font-semibold uppercase leading-7 tracking-wider text-vanilla-200\\">Running</span>
          </div>
        </ztag-stub>
      </div>
      <div class=\\"flex gap-x-3\\">
        <div class=\\"flex h-7 items-center gap-x-2 rounded-3px border border-slate-400 bg-ink-200 pl-2 pr-3 hover:bg-ink-100\\">
          <zicon-stub icon=\\"git-pull-request\\" size=\\"small\\" class=\\"flex-shrink-0\\"></zicon-stub>
          <div class=\\"line-clamp-1 text-sm text-vanilla-400\\"><a href=\\"https://github.com/deepsourcelabs/demo-python/pull/77\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"v-popper--has-tooltip\\">#77
            </a></div>
        </div>
        <!---->
      </div>
      <div class=\\"flex items-center sm:hidden\\">
        <meta-data-item label=\\"23 issues introduced\\" icon=\\"flag\\" text-size=\\"text-sm\\" class=\\"md:hidden\\"></meta-data-item>
      </div>
    </div>
    <div class=\\"hidden p-3 sm:flex\\">
      <div class=\\"flex w-full items-center justify-center gap-x-6\\">
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-cherry v-popper--has-tooltip\\">
            23
          </div>
          <div class=\\"text-xs text-vanilla-400\\">introduced</div>
        </div>
        <div class=\\"flex flex-col items-center\\">
          <div class=\\"text-2xl font-semibold text-vanilla-400 v-popper--has-tooltip\\">
            0
          </div>
          <div class=\\"text-xs text-vanilla-400\\">resolved</div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>"
`;
